simulation_elem_names = [
	'ACEL',
	'ACID',
	'AMTR',
	'ANAR',
	'ARAY',
	'BANG',
	'BCLN',
	'BCOL',
	'BGLA',
	'BHOL',
	'BIZR',
	'BIZRG',
	'BIZRS',
	'BMTL',
	'BOMB',
	'BOYL',
	'BRAY',
	'BRCK',
	'BREC',
	'BRMT',
	'BTRY',
	'BVBR',
	'C5',
	'CAUS',
	'CBNW',
	'CFLM',
	'CLNE',
	'CLST',
	'CNCT',
	'CO2',
	'COAL',
	'CONV',
	'CRAY',
	'CRMC',
	'DCEL',
	'DESL',
	'DEST',
	'DEUT',
	'DLAY',
	'DMG',
	'DMND',
	'DRAY',
	'DRIC',
	'DSTW',
	'DTEC',
	'DUST',
	'DYST',
	'E116',
	'E146',
	'ELEC',
	'EMBR',
	'EMP',
	'ETRD',
	'EXOT',
	'FIGH',
	'FILT',
	'FIRE',
	'FIRW',
	'FOG',
	'FRAY',
	'FRME',
	'FRZW',
	'FRZZ',
	'FSEP',
	'FUSE',
	'FWRK',
	'GAS',
	'GBMB',
	'GEL',
	'GLAS',
	'GLOW',
	'GOLD',
	'GOO',
	'GPMP',
	'GRAV',
	'GRVT',
	'GUNP',
	'H2',
	'HEAC',
	'HSWC',
	'ICEI',
	'IGNT',
	'INSL',
	'INST',
	'INVIS',
	'INWR',
	'IRON',
	'ISOZ',
	'ISZS',
	'LAVA',
	'LCRY',
	'LDTC',
	'LIFE',
	'LIGH',
	'LNTG',
	'LO2',
	'LOLZ',
	'LOVE',
	'LRBD',
	'LSNS',
	'MERC',
	'METL',
	'MORT',
	'MWAX',
	'NBHL',
	'NBLE',
	'NEUT',
	'NICE',
	'NITR',
	'NONE',
	'NSCN',
	'NTCT',
	'NWHL',
	'O2',
	'OIL',
	'PBCN',
	'PCLN',
	'PHOT',
	'PIPE',
	'PLEX',
	'PLNT',
	'PLSM',
	'PLUT',
	'POLO',
	'PPIP',
	'PQRT',
	'PROT',
	'PRTI',
	'PRTO',
	'PSCN',
	'PSNS',
	'PSTE',
	'PSTN',
	'PSTS',
	'PTCT',
	'PUMP',
	'PVOD',
	'QRTZ',
	'RBDM',
	'RFGL',
	'RFRG',
	'RIME',
	'RPEL',
	'SALT',
	'SAND',
	'SAWD',
	'SHLD1',
	'SHLD2',
	'SHLD3',
	'SHLD4',
	'SING',
	'SLTW',
	'SMKE',
	'SNOW',
	'SOAP',
	'SPAWN',
	'SPAWN2',
	'SPNG',
	'SPRK',
	'STKM',
	'STKM2',
	'STNE',
	'STOR',
	'SWCH',
	'TESC',
	'THDR',
	'THRM',
	'TRON',
	'TSNS',
	'TTAN',
	'TUNG',
	'URAN',
	'VIBR',
	'VINE',
	'VIRS',
	'VOID',
	'VRSG',
	'VRSS',
	'WARP',
	'WATR',
	'WAX',
	'WHOL',
	'WIFI',
	'WIRE',
	'WOOD',
	'WTRV',
	'YEST',
]

simulation_elem_src = []
foreach elem : simulation_elem_names
	simulation_elem_src += elem + '.cpp'
endforeach
simulation_elem_files = files(simulation_elem_src)
